<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FirstAndroid</string>
    <string name="app_name_2">QuizActivity</string>
    <string name="hello_world">Hello myself</string>
    <string name="question_text">This is a question: Are you alive, baby?</string>
    <string name="true_button">Yes</string>
    <string name="false_button">No</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>

    <string name="question_oceans">The Pacific Ocean is larger than
        the Atlantic Ocean.
    </string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
        and the Indian Ocean.
    </string>
    <string name="question_africa">The source of the Nile River is in Africa.</string>
    <string name="question_americas">The Amazon River is the longest river
        in the Americas.
    </string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and
        freshwater lake.
    </string>
    <string name="previous_button">Previous</string>

    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="warning_text_view">Are you sure, cheater?</string>
    <string name="crime_title_hint">Enter a title for crime</string>

    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crimes_title">Crimes</string>

    <string name="date_picker_title">Date of crime:</string>
</resources>
